# SwissKit

./: .gitignore  README.md  pyproject.toml
.github/workflows/: Flet-Windows-Build.yml  Flet_Multi-Platform_Build.yml
docs/: README.md  _coverpage.md  index.html
docs/images/email/: flow.drawio
src/: main.py
src/assets/: config.toml
src/assets/data/odap/: en_cn_dic.json
src/package/components/: file_or_path_picker.py  multi_select_component.py  navigation.py  new_navigation.py  progress_ring_components.py  search_component.py
src/package/database/: database_obj.py
src/package/database/pojo/: email_settings_config.py  pojo.py  translate_dic_pojo.py
src/package/database/pojo/email/: email_address.py  email_group.py  email_sent_log.py  email_settings_config.py
src/package/enums/: layout_enums.py  progress_status_enums.py
src/package/pages/: page_facroty.py  pages_loader.py  toolbox_page.py
src/package/pages/page/: email.py  excel_split_v2.py  odap_formater.py  odap_search_value.py
src/package/pages/page/email/: email_editor_page.py  email_info_page.py  email_info_page_v2.py  email_main.py  email_setting_page.py
src/package/pages/page/excel/: excel_split_keep_format.py  excel_split_v2.py
src/package/util/: dataframe_util.py  excel_util.py  json_loader.py  log_util.py  path_util.py  postman.py  resource_path.py  tool_util.py
