[project]
name = "SwissKit"
version = "v0.3.1"
description = ""
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Summer", email = "gitman@outlook.sg" }
]
dependencies = [
    "certifi>=2025.7.14",
    "flet==0.28.2",
    "openpyxl>=3.1.5",
    "pandas>=2.3.1",
    "pandas-stubs==2.3.0.250703",
    "peewee>=3.18.2",
    "picologging>=0.9.3",
    "pypinyin>=0.55.0",
    "python-levenshtein>=0.27.1",
    "pyyaml>=6.0.2",
    "requests>=2.32.4",
    "urllib3>=2.5.0",
]

[tool.flet]
# org name in reverse domain name notation, e.g. "com.mycompany".
# Combined with project.name to build bundle ID for iOS and Android apps
org = "fan.summer"

# project display name that is used as an app title on Android and iOS home screens,
# shown in window titles and about app dialogs on desktop.
product = "SwissKit"

# company name to display in about app dialogs
company = "Summer"

# copyright text to display in about app dialogs
copyright = "Copyright (C) 2025 by Flet & Summer"

[tool.flet.app]
path = "src"

[tool.flet.app.boot_screen]
show = true
message = "Swiss Kit is loading........"

[tool.uv]
dev-dependencies = [
    "flet[all]==0.28.2",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
flet = { extras = ["all"], version = "0.28.2" }
